--- a/wa_web_clone/package.json
+++ b/wa_web_clone/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
