--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wa_web_clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andre-fajar-n.github.io/WA-web-clone",
+  "homepage": "https://andre-fajar-n.github.io/WA-web-clone/",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
